--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -46,19 +46,19 @@
     
     <!-- Nav bar top -->
     <div class="container-fluid navbar-container">
-      
       <nav class="container-boxed navbar-boxed">
-        
-        <div class="nav-logo">
-          <a class="nav-logo-small" href="/">
-            <img src="{{ url_for('static', filename='img/beneluxcs_logo.png') }}" alt="Logo" loading="lazy">
-          </a>
-        </div>
+        <div class="nav-mobile-top">
+          <div class="nav-logo">
+            <a class="nav-logo-small" href="/">
+              <img src="{{ url_for('static', filename='img/beneluxcs_logo.png') }}" alt="Logo" loading="lazy">
+            </a>
+          </div>
 
-        <div class="hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
+          <div class="hamburger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+          </div>
         </div>
 
         <ul class="nav-links">
