--- a/BeneluxWebb/templates/esea.html
+++ b/BeneluxWebb/templates/esea.html
@@ -2,7 +2,9 @@
 {% extends "base.html" %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea_sidebar.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea_cards.css') }}">
 {% endblock %}
 
 {% block title %}ESEA{% endblock %}
@@ -26,27 +28,35 @@
             {% set label = "" %}
             {% if season.event_start and season.event_end %}
               {% if current_time >= season.event_start and current_time <= season.event_end %}
-                {% set label = "ongoing" %}
+                {% set label = "LIVE" %}
               {% elif current_time >= season.event_start - 604800 and current_time < season.event_start %}
-                {% set label = "starting soon" %}
+                {% set label = "SOON" %}
               {% endif %}
             {% endif %}
             <li class="nav-item" role="presentation">
               <button 
-                class="nav-link d-flex align-items-center gap-2 {% if loop.first %}active{% endif %}" 
+                class="nav-link season-nav-link {% if loop.first %}active{% endif %}" 
                 id="season-tab-{{ season.season_number }}"
                 data-season="{{ season.season_number }}"
                 data-banner="{{ season.event_banner }}"
                 type="button"
                 role="tab">
-                
-                <span>Szn {{ season.season_number }}</span>
+
+                <span>S-{{ season.season_number }}</span>
                 {% if label %}
                   <span class="badge bg-secondary">{{ label }}</span>
                 {% endif %}
               </button>
             </li>
           {% endfor %}
+          <li class="nav-item dropdown d-none">
+            <button class="nav-link dropdown-toggle" id="DropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              More
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="DropdownMenu">
+              <!-- Dropdown items will be added dynamically -->
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
