--- a/BeneluxWebb/static/css/components/navbar.css
+++ b/BeneluxWebb/static/css/components/navbar.css
@@ -15,7 +15,7 @@
   backdrop-filter: var(--glass-effect);
   -webkit-backdrop-filter: var(--glass-effect);
   border-bottom: 1px solid var(--border-glow);
-  z-index: 1000;
+  z-index: 9999;
   
   display: flex;
   align-items: flex-start;
@@ -30,7 +30,7 @@
 .container-boxed.navbar-boxed {
   width: 100%;
   height: var(--navbar-height-inner);
-  padding: 0;
+  padding-inline: 0.5rem;
   display: flex;
   align-items: center;
   transform: translateY(calc(0.5 * (var(--navbar-height) - var(--navbar-height-inner))));
@@ -173,7 +173,7 @@
 }
 
 /* Styling for small screens */
-@media screen and (max-width: 800px){
+@media screen and (max-width: 768px) {
   .navbar-container {
     height: auto !important;
     max-height: var(--navbar-height);
